--- a/AccountsMs/src/main/resources/bootstrap.yml
+++ b/AccountsMs/src/main/resources/bootstrap.yml
@@ -11,6 +11,13 @@ spring:
       enabled: true
       name: accounts-ms
       uri: ${CONFIG_SERVER:http://localhost:8888}
+      fail-fast: true
+      retry:
+        max-attempts: 8
+        initial-interval: 4000
+        max-interval: 9000
+        multiplier: 1.4
+
 logging:
   config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.active:default}/master/logback-spring.xml
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
