--- a/AuthMs/pom.xml
+++ b/AuthMs/pom.xml
@@ -48,6 +48,15 @@
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
