--- a/EurekaServer/src/main/resources/bootstrap.yml
+++ b/EurekaServer/src/main/resources/bootstrap.yml
@@ -10,6 +10,13 @@ spring:
       enabled: true
       name: EurekaServer
       uri: ${CONFIG_SERVER:http://localhost:8888}
+      fail-fast: true
+      retry:
+        max-attempts: 8
+        initial-interval: 4000
+        max-interval: 9000
+        multiplier: 1.4
+
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
 ---
