--- a/HystrixDashboard/pom.xml
+++ b/HystrixDashboard/pom.xml
@@ -50,6 +50,15 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
