--- a/HystrixDashboard/src/main/resources/bootstrap.yml
+++ b/HystrixDashboard/src/main/resources/bootstrap.yml
@@ -11,6 +11,13 @@ spring:
       enabled: true
       name: HystrixDashboard
       uri: ${CONFIG_SERVER:http://localhost:8888}
+      fail-fast: true
+      retry:
+        max-attempts: 8
+        initial-interval: 4000
+        max-interval: 9000
+        multiplier: 1.4
+
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
 ---
