--- a/turbine-server/src/main/resources/bootstrap.yml
+++ b/turbine-server/src/main/resources/bootstrap.yml
@@ -6,6 +6,13 @@ spring:
       enabled: true
       name: turbine-server
       uri: ${CONFIG_SERVER:http://localhost:8888}
+      fail-fast: true
+      retry:
+        max-attempts: 8
+        initial-interval: 4000
+        max-interval: 9000
+        multiplier: 1.4
+
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
 ---
