--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     ports:
       - 5601:5601
     volumes:
-      - "./DockerServices/conf/kibana.yml:/usr/share/kibana/config/kibana.yml"
+      - kibana-config:/usr/share/kibana/config
     depends_on:
       - elasticsearchserver
     networks:
@@ -61,8 +61,8 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - "./DockerServices/conf/logstash.yml:/usr/share/logstash/config/logstash.yml"
-      - "./DockerServices/conf/logstash_pipelines/:/usr/share/logstash/pipeline/"
+      - logstash-config:/usr/share/logstash/config
+      - logstash-pipeline:/usr/share/logstash/pipeline
     depends_on:
       - RabbitMQ-Server
       - elasticsearchserver
@@ -146,6 +146,23 @@ services:
       placement:
         constraints:
           - node.role == manager
+
+volumes:
+  kibana-config:
+    driver_opts:
+      type: none
+      device: ${PWD}/DockerServices/conf/kibana/config
+      o: bind
+  logstash-config:
+    driver_opts:
+      type: none
+      device: ${PWD}/DockerServices/conf/logstash/config
+      o: bind
+  logstash-pipeline:
+    driver_opts:
+      type: none
+      device: ${PWD}/DockerServices/conf/logstash/pipeline
+      o: bind
 
 networks:
   SpringCloudNetwork:
