--- a/AuthMs/pom.xml
+++ b/AuthMs/pom.xml
@@ -227,6 +227,13 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
 				<configuration>
@@ -257,6 +264,7 @@
 						<goals>
 							<goal>build</goal>
 							<goal>tag</goal>
+							<goal>push</goal>
 						</goals>
 					</execution>
 				</executions>
