--- a/HystrixDashboard/pom.xml
+++ b/HystrixDashboard/pom.xml
@@ -95,6 +95,13 @@
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
@@ -115,6 +122,7 @@
 						<goals>
 							<goal>build</goal>
 							<goal>tag</goal>
+							<goal>push</goal>
 						</goals>
 					</execution>
 				</executions>
