--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == master
+          - node.role == manager
 
   logstashserver:
     image: logstash:7.0.0
@@ -72,7 +72,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == master
+          - node.role == manager
 
   ZipkinServer:
     image: openzipkin/zipkin
