--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,6 +176,30 @@ services:
     networks:
       - SpringCloudNetwork
     deploy:
+      replicas: 2
+
+  ZuulApiProxy:
+    build:
+      context: ./ZuulApiProxy/
+      dockerfile: Dockerfile
+      args:
+        - JAR_FILE=ZuulApiProxy.jar
+    image: herychemo/sample-cloud-zuul-api-proxy:0.0.1-SNAPSHOT
+    container_name: ZuulApiProxy
+    hostname: ZuulApiProxy
+    environment:
+      - SPRING_PROFILES_ACTIVE=swarm
+    ports:
+      - 8081:8081
+    depends_on:
+      - ConfigServer
+      - EurekaServer
+      - ZipkinServer
+      - logstashserver
+      - RabbitMQ-Server
+    networks:
+      - SpringCloudNetwork
+    deploy:
       replicas: 1
 
 
