--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-image: maven:latest
 
 variables:
   MAVEN_CLI_OPTS: "--batch-mode"
@@ -21,13 +20,27 @@ cache:
 stages:
   - build
   - test
+  - push
 
 Build:
+  image: maven:latest
   stage: build
   script:
     - mvn $MAVEN_CLI_OPTS compile
 
 Test:
+  image: maven:latest
   stage: test
   script:
     - mvn $MAVEN_CLI_OPTS test
+
+Package-And-Push:
+  image: herychemo/dind-java-maven:latest
+  stage: push
+  services:
+    - docker:dind
+  script:
+    - docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY <<< "$CI_REGISTRY_PASSWORD"
+    - mvn $MAVEN_CLI_OPTS package deploy -DskipTests
+    - docker rmi $(docker images -qa -f 'dangling=true')
+
